--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <!-- Header Right -->
                             <div class="header-right">
                                 <div class="preview-button d-none d-sm-block">
-                                    <a class="brook-btn bk-btn-white btn-sd-size btn-rounded space-between" href="https://hasthemes.com/ottl" target="_blank">Purchase</a>
+                                    <a class="brook-btn bk-btn-white btn-sd-size btn-rounded space-between" href="https://www.facebook.com/bank.euu" target="_blank">Purchase</a>
                                 </div>
                                 <!-- Start Hamberger -->
                                 <div class="manu-hamber popup-mobile-click d-block d-lg-none black-version d-block d-xl-none">
@@ -964,11 +964,11 @@
                         aria-label="Quick Options">
                         <i class="fa fa-wrench"></i>
                     </a>
-                    <a class="hint--bounce hint--left hint--black primary-color-hover-important" target="_blank" href="https://hasthemes.com/contact-us/"
+                    <a class="hint--bounce hint--left hint--black primary-color-hover-important" target="_blank" href="https://www.facebook.com/bank.euu"
                         aria-label="Support Center">
                         <i class="fa fa-life-ring"></i>
                     </a>
-                    <a class="hint--bounce hint--left hint--black primary-color-hover-important" target="_blank" href="https://themeforest.net/item/brook-creative-agency-business-html-template/24226512?s_rank=5"
+                    <a class="hint--bounce hint--left hint--black primary-color-hover-important" target="_blank" href="https://www.facebook.com/bank.euu"
                         aria-label="Purchase Brook">
                         <i class="fa fa-shopping-cart"></i>
                     </a>
@@ -3044,7 +3044,7 @@
                                         <p class="bk_pra text-white font-20">Impressive design, powerful features, and easy customization</p>
                                     </div>
                                     <div class="call-btn text-center">
-                                        <a class="brook-btn bk-btn-white btn-sd-size btn-rounded space-between" href="https://hasthemes.com/ottl" target="_blank">Purchase Now</a>
+                                        <a class="brook-btn bk-btn-white btn-sd-size btn-rounded space-between" href="https://www.facebook.com/bank.euu" target="_blank">Purchase Now</a>
                                     </div>
                                 </div>
                             </div>
